Support for category labels.

--- a/public/milestones.less
+++ b/public/milestones.less
@@ -9,6 +9,10 @@
   overflow: hidden;
 }
 
+.milestones-vis-wrapper {
+  margin: 10px;
+}
+
 .milestones-notifications {
   position: absolute;
   left: 0;
