--- a/public/index.scss
+++ b/public/index.scss
@@ -1,4 +1,4 @@
-@import "../node_modules/d3-milestones/src/styles/styles.less";
+@import "../node_modules/d3-milestones/build/d3-milestones";
 
 .milestones-vis {
   width: 100%;
